baekjoon/b2240/head
node:internal/errors:983
  const err = new Error(message);
              ^

Error: Command failed: node sol2.js < data1
C:\PJ\cote\baekjoon\b2240\sol2.js:4
console.log(Math.max(BT(0,W,1));
                              ^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at Module._compile (node:internal/modules/cjs/loader:1528:20)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:170:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.14.0

    at genericNodeError (node:internal/errors:983:15)
    at wrappedFn (node:internal/errors:537:14)
    at ChildProcess.exithandler (node:child_process:414:12)
    at ChildProcess.emit (node:events:518:28)
    at maybeClose (node:internal/child_process:1101:16)
    at ChildProcess._handle.onexit (node:internal/child_process:304:5) {
  code: 1,
  killed: false,
  signal: null,
  cmd: 'node sol2.js < data1',
  stdout: '',
  stderr: 'C:\\PJ\\cote\\baekjoon\\b2240\\sol2.js:4\r\n' +
    'console.log(Math.max(BT(0,W,1));\r\n' +
    '                              ^\r\n' +
    '\r\n' +
    'SyntaxError: missing ) after argument list\r\n' +
    '    at wrapSafe (node:internal/modules/cjs/loader:1486:18)\r\n' +
    '    at Module._compile (node:internal/modules/cjs/loader:1528:20)\r\n' +
    '    at Object..js (node:internal/modules/cjs/loader:1706:10)\r\n' +
    '    at Module.load (node:internal/modules/cjs/loader:1289:32)\r\n' +
    '    at Function._load (node:internal/modules/cjs/loader:1108:12)\r\n' +
    '    at TracingChannel.traceSync (node:diagnostics_channel:322:14)\r\n' +
    '    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)\r\n' +
    '    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:170:5)\r\n' +
    '    at node:internal/main/run_main_module:36:49\r\n' +
    '\r\n' +
    'Node.js v22.14.0\r\n'
}

Node.js v22.14.0
